--- a/src/component/Navbar/styles.scss
+++ b/src/component/Navbar/styles.scss
@@ -320,3 +320,37 @@
 .card-item--content{
   margin-top:auto;
 }
+
+// ONE CARD
+
+.one-card--container{
+  display: flex;
+  justify-content: space-between;
+
+  .one-card__content{
+    width: 30%;
+    margin-top:80px;
+
+    p{
+      margin:50px 0;
+    }
+  }
+
+  // .one-card-bcg{
+  //   background-color: #e5f3f2;
+  //   position: absolute;
+  //   width: 100%;
+  //   height: 90%;
+  //   z-index: -1;
+  //   left:0;
+  // }
+}
+
+// DEVIDER
+
+.devider{
+  height:1px;
+  width:100%;
+  background-color: #000;
+  margin:100px 0 50px 0;
+}
