--- a/src/components/Navbar/styles.scss
+++ b/src/components/Navbar/styles.scss
@@ -245,7 +245,6 @@
 .main-carousel{
   height:700px;
   margin-top:15px;
-  border: 1px solid #000;
 }
 
 .carousel-item--element{
@@ -323,9 +322,24 @@
 
 // ONE CARD
 
+.bcg{
+  background-color: #e5f3f2;
+  position:absolute;
+  left:0;
+  width:100%;
+  height: 100%;
+  z-index: -1;
+}
+
 .one-card--container{
   display: flex;
   justify-content: space-between;
+
+  img{
+    position: relative;
+    top: 80px;
+    width: 60%;
+  }
 
   .one-card__content{
     width: 30%;
@@ -335,15 +349,6 @@
       margin:50px 0;
     }
   }
-
-  // .one-card-bcg{
-  //   background-color: #e5f3f2;
-  //   position: absolute;
-  //   width: 100%;
-  //   height: 90%;
-  //   z-index: -1;
-  //   left:0;
-  // }
 }
 
 // DEVIDER
@@ -352,5 +357,48 @@
   height:1px;
   width:100%;
   background-color: #000;
-  margin:100px 0 50px 0;
+  margin:150px 0 -25px 0;
+}
+
+// FOOTER
+
+.footer{
+  background-color: #e5f3f2;
+  padding-top:200px;
+  padding-bottom: 40px;
+
+  &-container{
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-around;
+  }
+
+  &__logo-container{
+    width: 25%;
+
+    img{
+      height:100px;
+      margin-left: 30px;
+    }
+  }
+
+  &-column__container{
+    display: flex;
+    align-items: flex-start;
+    width: 50%;
+  }
+
+  &__column{
+    display: flex;
+    flex-direction: column;
+    // margin-right: 50px;
+    width: 100%;
+
+    a{
+      font-size: 19px;
+      letter-spacing: 1px;
+      color:  #707070;
+      text-decoration: none;
+    }
+  }
 }
